# Video_Batch_Still_Generator

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml  pytest.ini  requirement.txt  requirements.txt
.cursor/rules/: face-recognition-template.mdc  gui-controller.mdc  naming-conventions.mdc  no-modify-legacy.mdc  quality-evaluator.mdc  security.mdc  style-python.mdc  style-qml.mdc  superresolution-export.mdc  tests-and-ci.mdc
.github/workflows/: ci.yml
src/: main.py
src/face_filter/: face_filter.py
src/frame_extractor/: frame_extractor.py
src/gui/: VideoBatchStillGenerator.qmlproject  __init__.py  main.py
src/gui/controllers/: __init__.py  main_controller.py
src/gui/qml/: Main.qml
src/gui/qml/components/: MessageDialog.qml  StatusBar.qml
src/gui/qml/views/: ExportView.qml  ImagePreviewView.qml  VideoListView.qml
src/quality_evaluator/: quality_evaluator.py
src/scene_detector/: scene_detector.py
src/superresolution_exporter/: superresolution_exporter.py
tests/: __init__.py  test_face_filter.py  test_scene_detector.py
